include/pr/view3d/dll/view3d.h

	// Forward declarations
	struct View3DV2;
	struct View3DM4x4;
	struct View3DBBox;
	struct View3DVertex;
	using View3D_ReportErrorCB = void (__stdcall *)(void* ctx, wchar_t const* msg, wchar_t const* filepath, int line, int64_t pos);
	enum class EView3DCullMode :int
	{
		Default = 0,
		None    = D3D11_CULL_MODE::D3D11_CULL_NONE,
		Front   = D3D11_CULL_MODE::D3D11_CULL_FRONT,
		Back    = D3D11_CULL_MODE::D3D11_CULL_BACK,
	};
	enum class EView3DGeom :int // pr::rdr::EGeom
	{
		Unknown = 0,
		Vert    = 1 << 0, // Object space 3D position
		Colr    = 1 << 1, // Diffuse base colour
		Norm    = 1 << 2, // Object space 3D normal
		Tex0    = 1 << 3, // Diffuse texture
		_flags_enum = 0,
	};
	enum class EView3DNuggetFlag :int
	{
		None = 0,

		// Exclude this nugget when rendering a model
		Hidden = 1 << 0,

		// Set if the geometry data for the nugget contains alpha colours
		GeometryHasAlpha = 1 << 1,

		// Set if the tint colour contains alpha
		TintHasAlpha = 1 << 2,

		// Excluded from shadow map render steps
		ShadowCastExclude = 1 << 3,

		_flags_enum = 0,
	};
	enum class EView3DShaderCS :int
	{
		None = 0,
	};
	enum class EView3DUpdateObject :unsigned int // Flags for partial update of a model
	{
		None         = 0U,
		All          = ~0U,
		Name         = 1 << 0,
		Model        = 1 << 1,
		Transform    = 1 << 2,
		Children     = 1 << 3,
		Colour       = 1 << 4,
		ColourMask   = 1 << 5,
		Reflectivity = 1 << 6,
		Flags        = 1 << 7,
		Animation    = 1 << 8,
		_flags_enum = 0,
	};
	enum class EView3DNavOp :int // pr::camera::ENavOp
	{
		None      = 0,
		Translate = 1 << 0,
		Rotate    = 1 << 1,
		Zoom      = 1 << 2,
		_flags_enum = 0,
	};
	enum class EView3DCameraLockMask :int // pr::camera::ELockMask
	{
		None           = 0,
		TransX         = 1 << 0,
		TransY         = 1 << 1,
		TransZ         = 1 << 2,
		RotX           = 1 << 3,
		RotY           = 1 << 4,
		RotZ           = 1 << 5,
		Zoom           = 1 << 6,
		CameraRelative = 1 << 7,
		All            = (1 << 7) - 1, // Not including camera relative
	};
	enum class EView3DFlags :int // sync with 'ELdrFlags'
	{
		None = 0,

		// The object is hidden
		Hidden = 1 << 0,

		// The object is filled in wireframe mode
		Wireframe = 1 << 1,

		// Render the object without testing against the depth buffer
		NoZTest = 1 << 2,

		// Render the object without effecting the depth buffer
		NoZWrite = 1 << 3,

		// The object has normals shown
		Normals = 1 << 4,

		// The object to world transform is not an affine transform
		NonAffine = 1 << 5,

		// Set when an object is selected. The meaning of 'selected' is up to the application
		Selected = 1 << 8,

		// Doesn't contribute to the bounding box on an object.
		BBoxExclude = 1 << 9,

		// Should not be included when determining the bounds of a scene.
		SceneBoundsExclude = 1 << 10,

		// Ignored for hit test ray casts
		HitTestExclude = 1 << 11,

		// Doesn't cast a shadow
		ShadowCastExclude = 1 << 12,

		// Bitwise operators supported
		_flags_enum = 0,
	};
	enum class EView3DHitTestFlags :int
	{
		Faces = 1 << 0,
		Edges = 1 << 1,
		Verts = 1 << 2,
		_flags_enum  = 0,
	};
	enum class EView3DSettings :int
	{
		// Upper 2-bytes = category
		// Lower 2-bytes = specific property that changed.
		None = 0,

		General                     = 1 << 16,
		General_FocusPointVisible   = General | 1 << 0,
		General_OriginPointVisible  = General | 1 << 1,
		General_SelectionBoxVisible = General | 1 << 2,

		Scene                  = 1 << 17,
		Scene_BackgroundColour = Scene | 1 << 0,
		Scene_Multisampling    = Scene | 1 << 1,
		Scene_FilllMode        = Scene | 1 << 2,
		Scene_CullMode         = Scene | 1 << 3,
		Scene_Viewport         = Scene | 1 << 4,

		Camera              = 1 << 18,
		Camera_Position     = Camera | 1 << 0,
		Camera_FocusDist    = Camera | 1 << 1,
		Camera_Orthographic = Camera | 1 << 2,
		Camera_Aspect       = Camera | 1 << 3,
		Camera_Fov          = Camera | 1 << 4,
		Camera_ClipPlanes   = Camera | 1 << 5,
		Camera_LockMask     = Camera | 1 << 6,
		Camera_AlignAxis    = Camera | 1 << 7,

		Lighting     = 1 << 19,
		Lighting_All = Lighting | 1 << 0,

		Diagnostics                    = 1 << 20,
		Diagnostics_BBoxesVisible      = Diagnostics | 1 << 0,
		Diagnostics_NormalsLength      = Diagnostics | 1 << 1,
		Diagnostics_NormalsColour      = Diagnostics | 1 << 2,
		Diagnostics_FillModePointsSize = Diagnostics | 1 << 3,

		_flags_enum = 0,
	};
	struct View3DV2
	{
		float x, y;
	};
	struct View3DM4x4
	{
		View3DV4 x, y, z, w;
	};
	struct View3DBBox
	{
		View3DV4 centre;
		View3DV4 radius;
	};
	struct View3DVertex
	{
		View3DV4 pos;
		View3DV4 norm;
		View3DV2 tex;
		View3DColour col;
		UINT32 pad;
	};
	struct View3DNugget
	{
		EView3DTopo       m_topo;
		EView3DGeom       m_geom;
		EView3DCullMode   m_cull_mode;
		EView3DFillMode   m_fill_mode;
		UINT32            m_v0, m_v1;       // Vertex buffer range. Set to 0,0 to mean the whole buffer
		UINT32            m_i0, m_i1;       // Index buffer range. Set to 0,0 to mean the whole buffer
		EView3DNuggetFlag m_nflags;         // Nugget flags
		BOOL              m_range_overlaps; // True if the nugget V/I range overlaps earlier nuggets
		View3DMaterial    m_mat;
	};
	struct View3DSceneChanged
	{
		// How the scene was changed
		EView3DSceneChanged m_change_type;

		// An array of the context ids that changed
		GUID const* m_ctx_ids;

		// The length of the 'm_ctx_ids' array
		int m_count;

		// Pointer to the object that changed (for single object changes only)
		View3DObject m_object;
	};
	using View3D_SettingsChangedCB     = void (__stdcall *)(void* ctx, View3DWindow window, EView3DSettings setting);
	using View3D_AddFileProgressCB     = void (__stdcall *)(void* ctx, GUID const& context_id, wchar_t const* filepath, long long file_offset, BOOL complete, BOOL* cancel);
	using View3D_OnAddCB               = void (__stdcall *)(void* ctx, GUID const& context_id, BOOL before);
	using View3D_SourcesChangedCB      = void (__stdcall *)(void* ctx, EView3DSourcesChangedReason reason, BOOL before);
	using View3D_InvalidatedCB         = void (__stdcall *)(void* ctx, View3DWindow window);
	using View3D_RenderCB              = void (__stdcall *)(void* ctx, View3DWindow window);
	using View3D_SceneChangedCB        = void (__stdcall *)(void* ctx, View3DWindow window, View3DSceneChanged const&);
	using View3D_AnimationCB           = void (__stdcall *)(void* ctx, View3DWindow window, EView3DAnimCommand command, double clock);
	using View3D_GizmoMovedCB          = void (__stdcall *)(void* ctx, View3DGizmo gizmo, EView3DGizmoState state);
	using View3D_EditObjectCB          = void (__stdcall *)(
		void* ctx,             // User callback context pointer
		UINT32 vcount,         // The maximum size of 'verts'
		UINT32 icount,         // The maximum size of 'indices'
		UINT32 ncount,         // The maximum size of 'nuggets'
		View3DVertex* verts,   // The vert buffer to be filled
		UINT16* indices,       // The index buffer to be filled
		View3DNugget* nuggets, // The nugget buffer to be filled
		UINT32& new_vcount,    // The number of verts in the updated model
		UINT32& new_icount,    // The number indices in the updated model
		UINT32& new_ncount);   // The number nuggets in the updated model
	// Tools
	VIEW3D_API void __stdcall View3D_ObjectManagerShow        (View3DWindow window, BOOL show);
	VIEW3D_API BOOL __stdcall View3D_MeasureToolVisible       (View3DWindow window);
	VIEW3D_API void __stdcall View3D_ShowMeasureTool          (View3DWindow window, BOOL show);
	VIEW3D_API BOOL __stdcall View3D_AngleToolVisible         (View3DWindow window);
	VIEW3D_API void __stdcall View3D_ShowAngleTool            (View3DWindow window, BOOL show);
	// Gizmos
	VIEW3D_API View3DGizmo      __stdcall View3D_GizmoCreate       (EView3DGizmoMode mode, View3DM4x4 const& o2w);
	VIEW3D_API void             __stdcall View3D_GizmoDelete       (View3DGizmo gizmo);
	VIEW3D_API void             __stdcall View3D_GizmoMovedCBSet   (View3DGizmo gizmo, View3D_GizmoMovedCB cb, void* ctx, BOOL add);
	VIEW3D_API void             __stdcall View3D_GizmoAttach       (View3DGizmo gizmo, View3DObject obj);
	VIEW3D_API void             __stdcall View3D_GizmoDetach       (View3DGizmo gizmo, View3DObject obj);
	VIEW3D_API float            __stdcall View3D_GizmoScaleGet     (View3DGizmo gizmo);
	VIEW3D_API void             __stdcall View3D_GizmoScaleSet     (View3DGizmo gizmo, float scale);
	VIEW3D_API EView3DGizmoMode __stdcall View3D_GizmoGetMode      (View3DGizmo gizmo);
	VIEW3D_API void             __stdcall View3D_GizmoSetMode      (View3DGizmo gizmo, EView3DGizmoMode mode);
	VIEW3D_API View3DM4x4       __stdcall View3D_GizmoGetO2W       (View3DGizmo gizmo);
	VIEW3D_API void             __stdcall View3D_GizmoSetO2W       (View3DGizmo gizmo, View3DM4x4 const& o2w);
	VIEW3D_API View3DM4x4       __stdcall View3D_GizmoGetOffset    (View3DGizmo gizmo);
	VIEW3D_API BOOL             __stdcall View3D_GizmoEnabled      (View3DGizmo gizmo);
	VIEW3D_API void             __stdcall View3D_GizmoSetEnabled   (View3DGizmo gizmo, BOOL enabled);
	VIEW3D_API BOOL             __stdcall View3D_GizmoManipulating (View3DGizmo gizmo);
	// Diagnostics
	VIEW3D_API BOOL         __stdcall View3D_DiagBBoxesVisibleGet     (View3DWindow window);
	VIEW3D_API void         __stdcall View3D_DiagBBoxesVisibleSet     (View3DWindow window, BOOL visible);
	VIEW3D_API float        __stdcall View3D_DiagNormalsLengthGet     (View3DWindow window);
	VIEW3D_API void         __stdcall View3D_DiagNormalsLengthSet     (View3DWindow window, float length);
	VIEW3D_API View3DColour __stdcall View3D_DiagNormalsColourGet     (View3DWindow window);
	VIEW3D_API void         __stdcall View3D_DiagNormalsColourSet     (View3DWindow window, View3DColour colour);
	VIEW3D_API View3DV2     __stdcall View3D_DiagFillModePointsSizeGet(View3DWindow window);
	VIEW3D_API void         __stdcall View3D_DiagFillModePointsSizeSet(View3DWindow window, View3DV2 size);
	// Miscellaneous
	VIEW3D_API void       __stdcall View3D_Flush                    ();
	VIEW3D_API BOOL       __stdcall View3D_TranslateKey             (View3DWindow window, int key_code);
	VIEW3D_API BOOL       __stdcall View3D_DepthBufferEnabledGet    (View3DWindow window);
	VIEW3D_API void       __stdcall View3D_DepthBufferEnabledSet    (View3DWindow window, BOOL enabled);
	VIEW3D_API BOOL       __stdcall View3D_FocusPointVisibleGet     (View3DWindow window);
	VIEW3D_API void       __stdcall View3D_FocusPointVisibleSet     (View3DWindow window, BOOL show);
	VIEW3D_API void       __stdcall View3D_FocusPointSizeSet        (View3DWindow window, float size);
	VIEW3D_API BOOL       __stdcall View3D_OriginVisibleGet         (View3DWindow window);
	VIEW3D_API void       __stdcall View3D_OriginVisibleSet         (View3DWindow window, BOOL show);
	VIEW3D_API void       __stdcall View3D_OriginSizeSet            (View3DWindow window, float size);
	VIEW3D_API BOOL       __stdcall View3D_SelectionBoxVisibleGet   (View3DWindow window);
	VIEW3D_API void       __stdcall View3D_SelectionBoxVisibleSet   (View3DWindow window, BOOL visible);
	VIEW3D_API void       __stdcall View3D_SelectionBoxPosition     (View3DWindow window, View3DBBox const& bbox, View3DM4x4 const& o2w);
	VIEW3D_API void       __stdcall View3D_SelectionBoxFitToSelected(View3DWindow window);
	VIEW3D_API GUID       __stdcall View3D_DemoSceneCreate          (View3DWindow window);
	VIEW3D_API void       __stdcall View3D_DemoSceneDelete          ();
	VIEW3D_API BSTR       __stdcall View3D_ExampleScriptBStr        ();
	VIEW3D_API BSTR       __stdcall View3D_AutoCompleteTemplatesBStr();
	VIEW3D_API void       __stdcall View3D_DemoScriptShow           (View3DWindow window);
	VIEW3D_API View3DM4x4 __stdcall View3D_ParseLdrTransform        (wchar_t const* ldr_script);
	VIEW3D_API BSTR       __stdcall View3D_ObjectAddressAt          (wchar_t const* ldr_script, int64_t position);
	VIEW3D_API ULONG      __stdcall View3D_RefCount                 (IUnknown* pointer);
	// Ldr Editor Ctrl
	VIEW3D_API HWND __stdcall View3D_LdrEditorCreate          (HWND parent);
	VIEW3D_API void __stdcall View3D_LdrEditorDestroy         (HWND hwnd);
	VIEW3D_API void __stdcall View3D_LdrEditorCtrlInit        (HWND scintilla_control, BOOL dark);