projects/rylogic/Rylogic.View3d/src/Gfx/View3d.cs


		// Tools
		[DllImport(Dll)]
		private static extern bool View3D_MeasureToolVisible(HWindow window);
		[DllImport(Dll)]
		private static extern void View3D_ShowMeasureTool(HWindow window, bool show);
		[DllImport(Dll)]
		private static extern bool View3D_AngleToolVisible(HWindow window);
		[DllImport(Dll)]
		private static extern void View3D_ShowAngleTool(HWindow window, bool show);

		// Gizmos
		[DllImport(Dll)]
		private static extern HGizmo View3D_GizmoCreate(Gizmo.EMode mode, ref m4x4 o2w);
		[DllImport(Dll)]
		private static extern void View3D_GizmoDelete(HGizmo gizmo);
		[DllImport(Dll)]
		private static extern void View3D_GizmoMovedCBSet(HGizmo gizmo, Gizmo.Callback cb, IntPtr ctx, bool add);
		[DllImport(Dll)]
		private static extern void View3D_GizmoAttach(HGizmo gizmo, HObject obj);
		[DllImport(Dll)]
		private static extern void View3D_GizmoDetach(HGizmo gizmo, HObject obj);
		[DllImport(Dll)]
		private static extern float View3D_GizmoScaleGet(HGizmo gizmo);
		[DllImport(Dll)]
		private static extern void View3D_GizmoScaleSet(HGizmo gizmo, float scale);
		[DllImport(Dll)]
		private static extern Gizmo.EMode View3D_GizmoGetMode(HGizmo gizmo);
		[DllImport(Dll)]
		private static extern void View3D_GizmoSetMode(HGizmo gizmo, Gizmo.EMode mode);
		[DllImport(Dll)]
		private static extern m4x4 View3D_GizmoGetO2W(HGizmo gizmo);
		[DllImport(Dll)]
		private static extern void View3D_GizmoSetO2W(HGizmo gizmo, ref m4x4 o2w);
		[DllImport(Dll)]
		private static extern m4x4 View3D_GizmoGetOffset(HGizmo gizmo);
		[DllImport(Dll)]
		private static extern bool View3D_GizmoEnabled(HGizmo gizmo);
		[DllImport(Dll)]
		private static extern void View3D_GizmoSetEnabled(HGizmo gizmo, bool enabled);
		[DllImport(Dll)]
		private static extern bool View3D_GizmoManipulating(HGizmo gizmo);

		// Diagnostics
		[DllImport(Dll)]
		private static extern bool View3D_DiagBBoxesVisibleGet(HWindow window);
		[DllImport(Dll)]
		private static extern void View3D_DiagBBoxesVisibleSet(HWindow window, bool visible);
		[DllImport(Dll)]
		private static extern float View3D_DiagNormalsLengthGet(HWindow window);
		[DllImport(Dll)]
		private static extern void View3D_DiagNormalsLengthSet(HWindow window, float length);
		[DllImport(Dll)]
		private static extern Colour32 View3D_DiagNormalsColourGet(HWindow window);
		[DllImport(Dll)]
		private static extern void View3D_DiagNormalsColourSet(HWindow window, Colour32 colour);
		[DllImport(Dll)]
		private static extern v2 View3D_DiagFillModePointsSizeGet(HWindow window);
		[DllImport(Dll)]
		private static extern void View3D_DiagFillModePointsSizeSet(HWindow window, v2 size);

		// Miscellaneous
		[DllImport(Dll)]
		private static extern void View3D_Flush();
		[DllImport(Dll)]
		private static extern bool View3D_TranslateKey(HWindow window, EKeyCodes key_code);
		[DllImport(Dll)]
		private static extern bool View3D_DepthBufferEnabledGet(HWindow window);
		[DllImport(Dll)]
		private static extern void View3D_DepthBufferEnabledSet(HWindow window, bool enabled);
		[DllImport(Dll)]
		private static extern bool View3D_FocusPointVisibleGet(HWindow window);
		[DllImport(Dll)]
		private static extern void View3D_FocusPointVisibleSet(HWindow window, bool show);
		[DllImport(Dll)]
		private static extern void View3D_FocusPointSizeSet(HWindow window, float size);
		[DllImport(Dll)]
		private static extern bool View3D_OriginVisibleGet(HWindow window);
		[DllImport(Dll)]
		private static extern void View3D_OriginVisibleSet(HWindow window, bool show);
		[DllImport(Dll)]
		private static extern void View3D_OriginSizeSet(HWindow window, float size);
		[DllImport(Dll)]
		private static extern bool View3D_SelectionBoxVisibleGet(HWindow window);
		[DllImport(Dll)]
		private static extern void View3D_SelectionBoxVisibleSet(HWindow window, bool visible);
		[DllImport(Dll)]
		private static extern void View3D_SelectionBoxPosition(HWindow window, ref BBox box, ref m4x4 o2w);
		[DllImport(Dll)]
		private static extern void View3D_SelectionBoxFitToSelected(HWindow window);
		[DllImport(Dll)]
		private static extern Guid View3D_DemoSceneCreate(HWindow window);
		[DllImport(Dll)]
		private static extern void View3D_DemoSceneDelete();
		[DllImport(Dll)]
		private static extern void View3D_DemoScriptShow(HWindow window);
		[DllImport(Dll)]
		private static extern void View3D_ObjectManagerShow(HWindow window, bool show);
		[DllImport(Dll)]
		private static extern m4x4 View3D_ParseLdrTransform([MarshalAs(UnmanagedType.LPWStr)] string ldr_script);
		[DllImport(Dll)]
		private static extern ulong View3D_RefCount(IntPtr pointer);

		[DllImport(Dll, CharSet = CharSet.Unicode)]
		[return: MarshalAs(UnmanagedType.BStr)]
		private static extern string View3D_ObjectAddressAt([MarshalAs(UnmanagedType.LPWStr)] string ldr_script, long position);

		[DllImport(Dll, CharSet = CharSet.Unicode)]
		[return: MarshalAs(UnmanagedType.BStr)]
		private static extern string View3D_ExampleScriptBStr();

		[DllImport(Dll, CharSet = CharSet.Unicode)]
		[return: MarshalAs(UnmanagedType.BStr)]
		private static extern string View3D_AutoCompleteTemplatesBStr();

		[DllImport(Dll)]
		private static extern HWND View3D_LdrEditorCreate(HWND parent);
		[DllImport(Dll)]
		private static extern void View3D_LdrEditorDestroy(HWND hwnd);
		[DllImport(Dll)]
		private static extern void View3D_LdrEditorCtrlInit(HWND scintilla_control, bool dark);

		#endregion
	}
}
